--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "material-react-table": "^2.13.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "eslint": "^8",
